skins/classic/common.css
/* ... */
#searchmenu ul.toolbarmenu li
{
  margin: 1px 4px 1px;
}

#searchmenu ul.toolbarmenu li label
{
  padding: 2px 0;
  color: black;
}

#searchmenu ul.toolbarmenu li label.comment
{
  color: #999;
}

#pagejump-selector
{
  max-height: 250px;
  overflow-x: hidden;
}

#pagejump-selector ul li
{
  min-width: 45px;
  padding: 2px 5px;
  cursor: default;
}


/*** folder selector ***/

#folder-selector li a
{
  padding: 0;
}

#folder-selector li a span
{
  background: url(images/icons/folders.png) no-repeat 6px 0;
  display: block;
  height: 15px;
  min-height: 14px;
  padding: 2px 4px 2px 28px;
  overflow: hidden;
  max-width: 120px;
  text-overflow: ellipsis;
}

#folder-selector li a.virtual
{
  color: #A0A0A0;
}

#folder-selector li a.active:hover span
{
  color: white;
}

#folder-selector li a.inbox span
{
  background-position: 6px -18px;
}
#folder-selector li a.drafts span
{
  background-position: 6px -37px;
}
#folder-selector li a.sent span
{
  background-position: 6px -54px;
}
#folder-selector li a.trash span
{
  background-position: 6px -91px;
}
#folder-selector li a.junk span
{
  background-position: 6px -73px;
}


/***** tabbed interface elements *****/

div.tabsbar,
#tabsbar
{
  position: absolute;
  top: 50px;
  left: 220px;
  right: 20px;
  height: 22px;
  border-bottom: 1px solid #999999;
  white-space: nowrap;
}

div.tabsbar
{
  top: 35px;
  left: 12px;
  right: 12px;
}

span.tablink,
span.tablink-selected
{
  float: left;
  height: 23px !important;
  height: 22px;
  overflow: hidden;
  background: url(images/tabs-left.gif) top left no-repeat;
}

span.tablink
{
  cursor: pointer;
}

span.tablink-selected
{
  cursor: default;
  background-position: 0px -23px;
}

span.tablink a,
span.tablink-selected a
{
  display: inline-block;
  padding: 5px 10px 0 5px;
  margin-left: 5px;
  height: 23px;
  color: #555555;
  max-width: 185px;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  -o-text-overflow: ellipsis;
  background: url(images/tabs-right.gif) top right no-repeat;
}

span.tablink-selected a
{
  cursor: inherit;
  color: #000000;
  background-position: right -23px;
}

fieldset
{
  margin-bottom: 1em;
  border: 1px solid #999999;
  padding: 4px 8px 9px 8px; 
}

legend
{
  color: #999999;
}

fieldset.tabbed
{
  margin-top: 22px;
  padding-top: 12px;
}

.quota_text {
  text-align: center;
  font-size: 10px;
  color: #666;
  border: 1px solid #999;
  cursor: default;
}
.quota_bg { background-color: white; }
.quota_high { background: url(images/quota-colors.png) repeat-x 0 -28px #f90509; }
.quota_mid { background: url(images/quota-colors.png) repeat-x 0 -14px #e3e909; }
.quota_low { background: url(images/quota-colors.png) repeat-x 0 0px #05f905; }
.quota_text_high { color: white; }
.quota_text_mid { color: #666; }
.quota_text_low { color: #666; }

table.quota-info {
	border-spacing: 0;
	border-collapse: collapse;
	table-layout: fixed;
	margin: 2px;
}

table.quota-info td,
table.quota-info th {
	border: 1px solid #999;
	padding: 2px 3px;
	text-align: center;
	min-width: 80px;
	color: #333;
	font-size: 11px;
}

table.quota-info th {
	font-weight: bold;
	background-color: #ddd;
}

table.quota-info td.name {
	text-align: left;
}

table.quota-info td.root {
	font-style: italic;
}

/********** TinyMCE styles **********/
.mce-btn-small button
{
  height: 22px;
}

.mce-btn-small i
{
  line-height: 16px !important;
  vertical-align: text-top !important;
}

.mce-combobox button
{
    padding: 6px 8px !important;
}

.mce-tinymce
{
  border-radius: 0 !important;
{

.mce-panel.mce-toolbar-grp
{
  border: 0 !important;
}

#image-selector-form.droptarget {
  background: url(images/filedrop.png) center bottom no-repeat;
}

#image-selector-form.droptarget.hover
{
  background-color: #F0F0EE;
  box-shadow: 0 0 5px 0 #999;
  -moz-box-shadow: 0 0 5px 0 #999;
  -o-box-shadow: 0 0 5px 0 #999;
}

